--- a/html/sina/css/reset.css
+++ b/html/sina/css/reset.css
@@ -11,7 +11,19 @@ li {
 }
 
 a {
+  color: #666;
   text-decoration: none;
+}
+
+a:visited {
+  color: #666;
+}
+
+a:active,
+a:focus,
+a:hover {
+  color: #ff8400;
+  text-decoration: underline;
 }
 
 .clearfix::before,
@@ -29,6 +41,6 @@ body {
 }
 
 .wrapper {
-  width: 1100px;
+  width: 1000px;
   margin: 0 auto;
 }
